[gd_scene load_steps=3 format=2]

[ext_resource path="res://lib/the_tale_api.gd" type="Script" id=1]
[ext_resource path="res://state/state_updater.gd" type="Script" id=2]

[node name="StateUpdater" type="Node"]
script = ExtResource( 2 )

[node name="TheTaleAPI" type="Node" parent="."]
script = ExtResource( 1 )

[node name="RequestTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="RequestTimer" to="." method="_on_RequestTimer_timeout"]
